--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README
 recursive-include fprice/static *.*
 recursive-include fprice/templates/fprice *.html
+recursive-include fprice/templates/flatpages *.html
 exclude .gitignore
